Handlers renamed (#88)
* updated openApi docs, added new params and descriptions

* updated users endpoint in gateway and user_service, now we need to security headers, api-key and jwt token
